fix(page): adjust spacing and brand size

--- a/src/patternfly/components/AboutModalBox/about-modal-box.scss
+++ b/src/patternfly/components/AboutModalBox/about-modal-box.scss
@@ -56,7 +56,7 @@
   --#{$about-modal-box}__close--c-button--FontSize: var(--pf-t--global--icon--size--lg);
 
   // Brand img
-  --#{$about-modal-box}__brand-image--Height: #{pf-size-prem(40px)};
+  --#{$about-modal-box}__brand-image--Height: #{pf-size-prem(37px)};
 
   // Header
   --#{$about-modal-box}__header--PaddingInlineEnd: var(--pf-t--global--spacer--xl);
